--- a/theOne/index.html
+++ b/theOne/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>the one</title>
+  <style media="screen">
+    canvas {
+      border: 1px black solid
+    }
+  </style>
 </head>
 
 <body>
@@ -14,12 +19,51 @@ var log = console.log.bind(console)
 var canvas = document.querySelector('#my-canvas')
 var context = canvas.getContext('2d')
 
+var x = 100
+var y = 200
 var img = new Image()
 img.src = 'racket.png'
 img.onload = function () {
-  context.drawImage(img, 0, 0)
+  context.drawImage(img, x, y)
 }
 
+var leftDown = false
+var rightDown = false
+var speed = 5
+//events
+window.addEventListener('keydown', function(event) {
+  var k = event.key
+  // log(event)
+  if (k == 'a') {
+    leftDown = true
+  } else if (k == 'd') {
+    rightDown = true
+  }
+})
+
+window.addEventListener('keyup', function(event) {
+  var k = event.key
+  // log(event)
+  if (k == 'a') {
+    leftDown = false
+  } else if (k == 'd') {
+    rightDown = false
+  }
+})
+
+setInterval(function() {
+  // update x
+  if (leftDown) {
+    x -= speed
+  } else if (rightDown) {
+    x += speed
+  }
+  // clamp x
+  
+  // draw
+  context.clearRect(0, 0, canvas.width, canvas.height)
+  context.drawImage(img, x, y)
+})
 </script>
 </body>
 
