--- a/theOne/index.html
+++ b/theOne/index.html
@@ -16,55 +16,113 @@
   
 <script>
 var log = console.log.bind(console)
-var canvas = document.querySelector('#my-canvas')
-var context = canvas.getContext('2d')
 
-var x = 100
-var y = 200
-var speed = 5
-
-var img = new Image()
-img.src = 'racket.png'
-img.onload = function () {
-  context.drawImage(img, x, y)
+var imageFromPath = function(path) {
+  var img = new Image()
+  img.src = path
+  return img
 }
 
-var leftDown = false
-var rightDown = false
-//events
-window.addEventListener('keydown', function(event) {
-  var k = event.key
-  // log(event)
-  if (k == 'a') {
-    leftDown = true
-  } else if (k == 'd') {
-    rightDown = true
+var Paddle = function() {
+  var image = imageFromPath('racket.png')
+  var o = {
+    image: image,
+    x: 100,
+    y: 200,
+    speed: 5,
   }
-})
-
-window.addEventListener('keyup', function(event) {
-  var k = event.key
-  // log(event)
-  if (k == 'a') {
-    leftDown = false
-  } else if (k == 'd') {
-    rightDown = false
+  o.moveLeft = function() {
+    this.x -= this.speed
   }
-})
-
-setInterval(function() {
-  // update x
-  if (leftDown) {
-    x -= speed
-  } else if (rightDown) {
-    x += speed
+  o.moveRight = function() {
+    this.x += this.speed
   }
-  // clamp x
+  return o
+}
 
-  // draw
-  context.clearRect(0, 0, canvas.width, canvas.height)
-  context.drawImage(img, x, y)
-})
+var Game = function() {
+  var g = {
+    actions: {},
+    keydowns: {},
+  }
+  var canvas = document.querySelector('#my-canvas')
+  var context = canvas.getContext('2d')
+  g.canvas = canvas
+  g.context = context
+  // events
+  /*window.addEventListener('keydown', function(event) {
+    g.keydowns[event.key] = true
+  })
+  window.addEventListener('keyup', function(event) {
+    g.keydowns[event.key] = false
+  })
+  // 
+  g.registerAction = function(key, callback) {
+    g.actions[key] = callback
+  }
+  */
+  // timer
+  setInterval(function() {
+    // events
+   /* var actions = Object.keys(g.actions)
+    for (var i = 0; i < actions.length; i++) {
+      var key = action[i]
+      if (g.keydowns[key]) {
+        g.actions[key]
+      }
+    }*/
+    // update
+    g.update()
+    // clear
+    context.clearRect(0, 0, canvas.width, canvas.height)
+    // draw
+    g.draw()
+  }, 1000/30)
+
+  return g
+}
+
+var __main = function() {
+  var game = Game()
+
+  var paddle = Paddle()
+
+  var leftDown = false
+  var rightDown = false
+  //events
+  window.addEventListener('keydown', function(event) {
+    var k = event.key
+    // log(event)
+    if (k == 'a') {
+      leftDown = true
+    } else if (k == 'd') {
+      rightDown = true
+    }
+  })
+
+  window.addEventListener('keyup', function(event) {
+    var k = event.key
+    // log(event)
+    if (k == 'a') {
+      leftDown = false
+    } else if (k == 'd') {
+      rightDown = false
+    }
+  })
+
+  game.update = function() {
+    // update x
+    if (leftDown) {
+      paddle.moveLeft()
+    } else if (rightDown) {
+      paddle.moveRight()
+    }
+  }
+  game.draw = function() {
+    game.context.drawImage(paddle.image, paddle.x, paddle.y)
+  }
+}
+__main()
 </script>
 </body>
 
