--- a/theOne/index.html
+++ b/theOne/index.html
@@ -24,7 +24,7 @@ var imageFromPath = function(path) {
 }
 
 var Paddle = function() {
-  var image = imageFromPath('racket.png')
+  var image = imageFromPath('paddle.png')
   var o = {
     image: image,
     x: 100,
@@ -39,6 +39,34 @@ var Paddle = function() {
   }
   return o
 }
+var Ball = function() {
+  var image = imageFromPath('ball.png')
+  var o = {
+    image: image,
+    x: 100,
+    y: 200,
+    speedX: 10,
+    speedY: 10,
+    fired: false,
+  }
+  o.fire = function() {
+    o.fired = true
+  }
+  o.move = function() {
+    if (o.fired) {
+      if (o.x < 0 || o.x > 400) {
+        o.speedX *= -1
+      }
+      if (o.y < 0 || o.y > 300) {
+        o.speedY *= -1
+      }
+      // move
+      o.x += o.speedX
+      o.y += o.speedY
+    }
+  }
+  return o
+}
 
 var Game = function() {
   var g = {
@@ -49,6 +77,10 @@ var Game = function() {
   var context = canvas.getContext('2d')
   g.canvas = canvas
   g.context = context
+  // draw
+  g.drawImage = function(Image) {
+    g.context.drawImage(Image.image, Image.x, Image.y)
+  }
   // events
   window.addEventListener('keydown', function(event) {
     g.keydowns[event.key] = true
@@ -87,18 +119,24 @@ var __main = function() {
   var game = Game()
 
   var paddle = Paddle()
+  var ball = Ball()
 
+  game.registerAction('f', function() {
+    ball.fire()
+  })
   game.registerAction('a', function() {
     paddle.moveLeft()
   })
   game.registerAction('d', function() {
     paddle.moveRight()
   })
-
   game.update = function() {
+    ball.move()
   }
   game.draw = function() {
-    game.context.drawImage(paddle.image, paddle.x, paddle.y)
+    // draw
+    game.drawImage(paddle)
+    game.drawImage(ball)
   }
 }
 __main()
