--- a/theOne/index.html
+++ b/theOne/index.html
@@ -28,8 +28,8 @@ var Paddle = function() {
   var o = {
     image: image,
     x: 100,
-    y: 200,
-    speed: 5,
+    y: 260,
+    speed: 8,
   }
   o.moveLeft = function() {
     this.x -= this.speed
@@ -37,14 +37,23 @@ var Paddle = function() {
   o.moveRight = function() {
     this.x += this.speed
   }
+  o.collide = function(ball) {
+    if (ball.y + ball.image.height > o.y && ball.y < o.y + o.image.height) {
+      if (ball.x > o.x && ball.x < o.x + o.image.width) {
+        log('相撞')
+        return true
+      }
+    }
+    return false
+  }
   return o
 }
 var Ball = function() {
   var image = imageFromPath('ball.png')
   var o = {
     image: image,
-    x: 100,
-    y: 200,
+    x: 120,
+    y: 230,
     speedX: 10,
     speedY: 10,
     fired: false,
@@ -54,16 +63,20 @@ var Ball = function() {
   }
   o.move = function() {
     if (o.fired) {
-      if (o.x < 0 || o.x > 400) {
+      if (o.x < 0 || o.x + o.image.width > 400) {
         o.speedX *= -1
       }
-      if (o.y < 0 || o.y > 300) {
+      if (o.y < 0 || o.y + o.image.height > 300) {
         o.speedY *= -1
       }
       // move
       o.x += o.speedX
       o.y += o.speedY
     }
+  }
+  // 反弹
+  o.rebound = function() {
+      o.speedY *= -1
   }
   return o
 }
@@ -132,6 +145,10 @@ var __main = function() {
   })
   game.update = function() {
     ball.move()
+    // 判断相撞
+    if (paddle.collide(ball)) {
+      ball.rebound()
+    }
   }
   game.draw = function() {
     // draw
